part2/2.7/manifests/deployment-ping-pong.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong
  namespace: exercises
  labels:
    app: ping-pong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      containers:
        - name: ping-pong
          image: tripplen63/ping-pong:2.7
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
